--- a/client/client.cbp
+++ b/client/client.cbp
@@ -27,9 +27,11 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="../engine" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="../engine/bin/Release/libengine.so" />
 				</Linker>
 			</Target>
 		</Build>
