--- a/engine/engine.cbp
+++ b/engine/engine.cbp
@@ -35,9 +35,14 @@
 				<Option createStaticLib="1" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="glm" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="GL" />
+					<Add library="glut" />
+					<Add library="freeimage" />
+					<Add library="GLEW" />
 				</Linker>
 			</Target>
 		</Build>
@@ -74,6 +79,10 @@
 		<Unit filename="perspective_camera.hpp" />
 		<Unit filename="point_light.cpp" />
 		<Unit filename="point_light.hpp" />
+		<Unit filename="shader.cpp" />
+		<Unit filename="shader.hpp" />
+		<Unit filename="simple_shader.cpp" />
+		<Unit filename="simple_shader.hpp" />
 		<Unit filename="sphere.cpp" />
 		<Unit filename="sphere.hpp" />
 		<Unit filename="spot_light.cpp" />
