--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="passthrough_shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ovr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="my_engine.hpp">
@@ -126,6 +129,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="passthrough_shader.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ovr.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ovvr.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
