--- a/client/client.cbp
+++ b/client/client.cbp
@@ -14,6 +14,7 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="../engine" />
+					<Add directory="../dependencies/openvr/include" />
 				</Compiler>
 				<Linker>
 					<Add library="../engine/bin/Debug/libengine.so" />
