Introduced images but i think theres a memory leak

--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -37,7 +37,6 @@
     <ClCompile Include="simple_shader.cpp" />
     <ClCompile Include="skybox.cpp" />
     <ClCompile Include="skybox_shader.cpp" />
-    <ClCompile Include="skybox_shader.hpp" />
     <ClCompile Include="spot_light.cpp" />
     <ClCompile Include="texture.cpp" />
   </ItemGroup>
@@ -61,6 +60,7 @@
     <ClInclude Include="shader.hpp" />
     <ClInclude Include="simple_shader.hpp" />
     <ClInclude Include="skybox.hpp" />
+    <ClInclude Include="skybox_shader.hpp" />
     <ClInclude Include="spot_light.hpp" />
     <ClInclude Include="texture.hpp" />
   </ItemGroup>
