--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="skybox_shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="leap.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="my_engine.hpp">
@@ -141,6 +144,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="skybox_shader.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="leap.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
