Leap not working cause I had to delete some updates

--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="leap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="leap_shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="my_engine.hpp">
@@ -147,6 +150,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="leap.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="leap_shader.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
