Readded leap dependencies

--- a/client/client.vcxproj
+++ b/client/client.vcxproj
@@ -105,8 +105,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>..\dependencies\glew\include;..\dependencies\openvr\include;..\dependencies\glm\include;..\engine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4251;4005</DisableSpecificWarnings>
+      <AdditionalIncludeDirectories>..\dependencies\leap\include;..\dependencies\glew\include;..\dependencies\openvr\include;..\dependencies\glm\include;..\engine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4251;4005;4267</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
